--- a/index.html
+++ b/index.html
@@ -93,26 +93,26 @@
     <ul class="row ">
         <li class="col-md-3 col-sm-3 focus">
             <b></b>
-            <h4>资料下载</h4>
-            <span></span>
+            <a href="download.html"><h4>资料下载</h4>
+            <span></span></a>
             <p>为大家提供开发过程中一些常用的软件、工具，一些书籍和文档，以及一些编程源码，方便大家学习。</p>
         </li>
         <li class=" col-md-3 col-sm-3 focus">
             <b></b>
-            <h4>学习笔记</h4>
-            <span></span>
+            <a href="http://www.jianshu.com" target="_blank"><h4>学习笔记</h4>
+            <span></span></a>
             <p>学习过程中记录的点滴，学习的过程中最重要的不是资料，而是学习过程中的感悟、心得的积累。</p>
         </li>
         <li class=" col-md-3 col-sm-3 focus">
             <b></b>
-            <h4>分享</h4>
-            <span></span>
+            <a href="download.html"><h4>分享</h4>
+            <span></span></a>
             <p>分享一些高质量的代码，和一些经典案例。有需要的朋友可以参考一下，领略一下大师们的风采。</p>
         </li>
         <li class=" col-md-3 col-sm-3 focus">
             <b></b>
-            <h4>感悟</h4>
-            <span></span>
+            <a href="http://weibo.com/5697178008/profile?topnav=1&wvr=6&is_all=1" target="_blank"><h4>感悟</h4>
+            <span></span></a>
             <p>分享自己生活中的爱好以及工作中生活中的一些感悟，没有华丽的辞藻，只有朴实的心灵
 ，只有用心的真诚与大家共勉。</p>
         </li>
