--- a/download.html
+++ b/download.html
@@ -435,7 +435,7 @@
     </div>
       
 </div>
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
+    <script src="lib/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
