--- a/index.html
+++ b/index.html
@@ -52,25 +52,59 @@
 <!--轮播图-->
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
-  <ol class="carousel-indicators">
+   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="6"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img/tab102801.jpg" alt="...">
+    <div class="item active banner">
+        <div class="banner1">
+            <p class="p1"><<b>html</b>></p>
+            <p class="p2">star<span> fresh</span>.</p>
+        </div>
     </div>
-    <div class="item">
-      <img src="img/tab102802 (2).jpg" alt="...">
+    <div class="item banner">
+        <div class="banner2">
+            <p class="p1"><<b>style</b>></p>
+            <p class="p2">She had not lost her grace and<span> style </span>.</p>
+        </div>
     </div>
-    <div class="item">
-      <img src="img/tab102803 (2).jpg" alt="...">
+    <div class="item banner">
+        <div class="banner7">
+            <p class="p1"><<b>body</b>></p>
+            <p class="p2">I need to lose<span> weight</span>.</p>
+        </div>
+    </div>    
+    <div class="item banner">
+        <div class="banner3">
+            <p class="p1"><<b>div</b>></p>
+            <p class="p2">We have<span> diverse </span>interests.</p>
+        </div>
     </div>
-    <div class="item">
-      <img src="img/tab102804 (2).jpg" alt="...">
+    <div class="item banner">
+        <div class="banner6">
+            <p class="p1"><<b>img</b>></p>
+            <p class="p2">His<span> image </span>was fixed in her mind.</p>
+        </div>
+    </div>
+    <div class="item banner">
+        <div class="banner4">
+            <p class="p1"><<b>/br</b>></p>
+            <p class="p2">We should <span> break </span>up.</p>
+        </div>
+    </div>
+    <div class="item banner">
+        <div class="banner5">
+            <p class="p1"><<b>/html</b>></p>
+            <p class="p2">The <span>end</span> is always near.</p>
+        </div>
     </div>
   </div>
 
