--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <li class="nav-item"><a href="#works" id="toworks">学无止境</a></li>
                     <li class="nav-item"><a href="#proposal" id="toproposal">留言板</a></li>
                     <li class="nav-item last_li"><a href="#address" id="toaddress">联系我</a></li>
+			<li class="nav-item last_li"><a href="html/resume.html" id="toaddress">个人简历</a></li>
                 </ul>
             </div>
         </div>
