--- a/download.html
+++ b/download.html
@@ -23,9 +23,23 @@
             </ul>
         </div>
         <div>
-            <a href="index.html">
-                <span>返回首页</span>
-            </a>
+            <ol class="topnav fr">
+                <li>
+                    <a href="index.html">首页
+                    <span class="en">Protal</span></a>
+                </li>
+                <li>
+                    <a href="html/download.html">下载<span class="en">Dowload</span></a>
+                </li>
+                <li>
+                    <a href="html/note.html">笔记<span class="en">Learn</span></a>
+                </li>
+                 <li>
+                    <a href="html/download.html">分享<span class="en">Share</span></a>
+                </li>
+                <li>
+                    <a href="html/gnosis.html">感悟<span class="en">Life</span></a>
+                </li>
         </div>
     </div>
 
