--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </li>
         <li class=" col-md-3 col-sm-3 focus">
             <b></b>
-            <a href="html/note.html" target="_blank"><h4>学习笔记</h4>
+            <a href="html/note.html"><h4>学习笔记</h4>
             <span></span></a>
             <p>学习过程中记录的点滴，学习的过程中最重要的不是资料，而是学习过程中的感悟、心得的积累。</p>
         </li>
@@ -146,7 +146,7 @@
         </li>
         <li class=" col-md-3 col-sm-3 focus">
             <b></b>
-            <a href="html/gnosis.html" target="_blank"><h4>感悟</h4>
+            <a href="html/gnosis.html"><h4>感悟</h4>
             <span></span></a>
             <p>分享自己生活中的爱好以及工作中生活中的一些感悟，没有华丽的辞藻，只有朴实的心灵
 ，只有用心的真诚与大家共勉。</p>
